--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -6,6 +6,9 @@
   </head>
   <body>
     {% include navigation.html %}
+    <pre>URL:   '{{ page.url }}'</pre>
+    <p>Content below</p>
+    <p>-------------</p>
     {{ content }}
   </body>
 </html>
